--- a/grupo3/src/main/resources/application.properties
+++ b/grupo3/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=TheCanchitas
+
+
+#==========================
+#			DATA SOURCE
+#==========================
+
+ # JPA
+spring.jpa.show-sql=true
+
+#server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3307/thecanchita
+
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+
+spring.datasource.password=canchita
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+loging.level.org.hibernet.orm.jdbc.bind = true
