--- a/grupo3/src/main/resources/application.properties
+++ b/grupo3/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.url=jdbc:mysql://localhost:3307/thecanchita
 
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
+spring.datasource.username=canchita
 
 spring.datasource.password=canchita
 
