--- a/grupo3/src/main/resources/application.properties
+++ b/grupo3/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=TheCanchitas
 
-
 #==========================
 #			DATA SOURCE
 #==========================
@@ -9,11 +8,11 @@ spring.application.name=TheCanchitas
 spring.jpa.show-sql=true
 
 #server.port=8080
-
-spring.datasource.url=jdbc:mysql://localhost:3307/thecanchita
+spring.main.allow-circular-references=true
+spring.datasource.url=jdbc:mysql://localhost:3307/persistencia
 
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=canchita
 
 spring.datasource.password=canchita
@@ -22,4 +21,3 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-loging.level.org.hibernet.orm.jdbc.bind = true
