--- a/grupo3/.gitignore
+++ b/grupo3/.gitignore
@@ -5,6 +5,7 @@ target/
 !**/src/test/**/target/
 
 
+
 ### STS ###
 .apt_generated
 .classpath
@@ -33,4 +34,4 @@ build/
 ### VS Code ###
 .vscode/
 
-./src/main/resources/aplication.properties
+src/main/resources/application.properties
