--- a/grupo3/bin/src/main/resources/application.properties
+++ b/grupo3/bin/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql=true
 
 #server.port=8080
 spring.main.allow-circular-references=true
-spring.datasource.url=jdbc:mysql://localhost:3306/thecanchita
+spring.datasource.url=jdbc:mysql://localhost:3307/canchitabs
 
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -17,7 +17,9 @@ spring.datasource.username=canchita
 
 spring.datasource.password=canchita
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+#Soluciona el error de Mayusculas en entidades y base de datos error de columna no encontrada. 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
