--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/canchitabs
 
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=canchita
+spring.datasource.password=canchita
 
 spring.jpa.hibernate.ddl-auto=none
 
